# metadock

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pre_test.md  pyproject.toml  test.md
.github/workflows/: main.yml  metadock_build.yml
.metadock/: metadock-build-docs.sh
.metadock/content_schematics/: cli.yml  example_project.yml  file1.yml  file2.yml  gitlab_mr__feature1.yml  jinja_helpers.yml  python_interfaces.yml  repo_readme.yml
.metadock/content_schematics/documents/: repo_readme.yml  vscode_jinja_md_metadock_snippets.yml
.metadock/content_schematics/folder1/: file3.yml
.metadock/content_schematics/jinja_helpers/: global.yml  html.yml  md.yml
.metadock/generated_documents/: README.html  README.md  gitlab_mr__feature1.html  gitlab_mr__feature1.md  jinja-md.code-snippets
.metadock/templated_documents/: gitlab_mr_template.md  repo_readme_template.md  vscode_jinja_md_metadock.code-snippets
metadock/: __init__.py  cli.py  engine.py  env.py  exceptions.py  target_formats.py  yaml_utils.py
tests/: conftest.py  test_engine.py  test_env.py  test_target_formats.py  test_yaml_utils.py
